const { normalizeUrl } = require('../utils');

class RequestDispatcher {
    async dispatch(req, res, context) {
        normalizeUrl(req);
        
        const route = context.RouteRegistry.find(req.method, req.url);

        if (route) {
            req.params = route.params;
        }

        await context.MiddlewarePipeline.execute(req, res);

        // Middleware already handled the request
        if (res.writableEnded || req.handled)
            return;

        if (!route) {
            res.status(404).send('Not Found');
            return;
        }

        await route.handler(req, res);
    }
}

module.exports = RequestDispatcher;